<resources>
    <string name="app_name">AduanKu</string>
    <string name="welcome">Welcome to AduanKu 👋🏼 </string>
    <string name="tagline">Dari Anda untuk Layanan Publik yang Lebih Baik.</string>
    <string name="loginGoogle">Login with google</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar disini.</string>
    <string name="passwordHintRepeat">Ulangi Password</string>
    <string name="daftar">daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="laporan_warga">Laporan Warga</string>
    <string name="berita">Berita</string>
    <string name="laporan_saya">Laporan Saya</string>
    <string name="cuaca">Cuaca</string>
    <string name="desc">AduanKu adalah aplikasi layanan publik yang dirancang untuk mempermudah masyarakat dalam menyampaikan aduan, mendapatkan informasi terkini, serta memantau kondisi cuaca di sekitar mereka. Dengan tujuan utama untuk meningkatkan transparansi, komunikasi, dan partisipasi masyarakat, aplikasi ini hadir sebagai jembatan antara warga dengan pemerintah dan instansi terkait.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer">Developer</string>
    <string name="devName">Shidiq NH - 152022016</string>
    <string name="aduanku_demo">Aduanku Demo</string>
    <string name="github">Github</string>
    <string name="unameHint">username</string>
    <string name="default_web_client_id">1094140543613-l85da9sfh0kmvne650uiuc7gn496qt9o.apps.googleusercontent.com</string>
    <string-array name="jenis_laporan_array">
        <item>Infrastruktur</item>
        <item>Lingkungan</item>
        <item>Keamanan</item>
        <item>Bencana Alam</item>
        <item>Transportasi</item>
    </string-array>
</resources>