<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:layout_gravity="center_vertical">

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            app:layout_constraintWidth_percent="0.80"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Description Text -->
        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:justificationMode="inter_word"
            tools:targetApi="o" />

        <!-- Developer Title -->
        <TextView
            android:id="@+id/devTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Developer Image -->
        <ImageView
            android:id="@+id/devImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:src="@drawable/dev"
            app:layout_constraintTop_toBottomOf="@id/devTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Developer Name -->
        <TextView
            android:id="@+id/devName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devName"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/devImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Buttons Layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/devName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/githubButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textSize="10sp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_border" />

            <Button
                android:id="@+id/aduankuDemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aduanku_demo"
                android:textSize="10sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/button_border" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
