<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">



    <LinearLayout
        android:id="@+id/homeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Placeholder image when loading -->
        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/placeholder_image" />


        <View
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="-25dp"
            android:background="@drawable/placeholder_image"
            android:backgroundTint="@color/primaryLight"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:padding="20dp">

            <!-- First Row with 3 columns -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- First cell with Image and Text -->
                <LinearLayout
                    android:id="@+id/laporanWarga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/laporan_warga"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/laporan_warga"
                        android:gravity="center"/>
                </LinearLayout>


                <!-- Third cell with Image and Text -->
                <LinearLayout
                    android:id="@+id/laporanSaya"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/laporan_saya"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/laporan_saya"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Cuaca"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/cuaca" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cuaca"
                        android:gravity="center"/>
                </LinearLayout>
            </TableRow>
        </TableLayout>

    </LinearLayout>



</FrameLayout>